# clang-tidy-plugin-demo

./: .gitignore  LICENSE  README.md
.github/workflows/: testcpp.yml
src/: CMakeLists.txt
src/revise_lib_v2_check/: CMakeLists.txt  ReviseLibV2APICheck.cpp
src/sample_code_for_presentation/: .clang-tidy  CMakeLists.txt  example1.cpp  example2-after.cpp  example2.cpp  example3-after.cpp  example3.cpp  example4-after.cpp  example4.cpp  lib.h  libv1.h  libv2.h  patate.cpp  record.h
